<think></think>feat: add environment configuration and project structure updates
Added .env.example template with comprehensive configurations for the Vehicle Type Detection API including server settings, model paths, detection parameters, security options, and more. Updated package paths in pyproject.toml from 'vehicle-type-detection' to 'vehicle_type_detection_api' throughout all configuration sections to match the new project structure. Added pytest.ini configuration file with detailed test discovery patterns, coverage settings, and custom markers for different test categories.

--- a/.gitignore
+++ b/.gitignore
@@ -214,4 +214,35 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Machine Learning / AI specific
+# Data files
+data/
+datasets/
+*.csv
+*.parquet
+
+# Training outputs
+checkpoints/
+wandb/
+mlruns/
+outputs/
+results/
+logs/
+
+# Temporary processing files
+uploads/
+temp_images/
+processed_images/
+
+# FastAPI specific
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Docker
+docker-compose.override.yml
+
 models/*
